--- a/destination_list.html
+++ b/destination_list.html
@@ -12,7 +12,7 @@
     
     <div class="container">
         <!-- Navigation bar -->
-        <nav class="navbar fixed-top navbar-light" style="padding-top: 30px; padding-bottom: 10px; background-color: rgb(220, 209, 195);">
+        <nav class="navbar fixed-top navbar-light" style="background-color: rgb(220, 209, 195);">
 
             <div class="container-fluid">
                 <a class="bi bi-arrow-left" href="index.html" style="color: rgb(160, 150, 137); margin-left: 10px; font-size: 30px;">
