--- a/travel-tips1.html
+++ b/travel-tips1.html
@@ -11,7 +11,7 @@
 
 <div class="container py-5">
     <!-- Navigation bar -->
-    <nav class="navbar fixed-top navbar-light" style="padding-top: 30px; padding-bottom: 10px; background-color: rgb(220, 209, 195);">
+    <nav class="navbar fixed-top navbar-light" style="background-color: rgb(220, 209, 195);">
 
         <div class="container-fluid">
             <a class="bi bi-arrow-left" href="klcc-info.html" style="color: rgb(160, 150, 137); margin-left: 10px; font-size: 30px;">
