Update escape-info.html and klcc-info.html: add interactive map, adjust text, and add YouTube video
This commit updates the escape-info.html and klcc-info.html files by adding an interactive map,

--- a/klcc-info.html
+++ b/klcc-info.html
@@ -27,12 +27,16 @@
             <img src="resources/klcc.jpg" class="img-fluid mb-3" alt="Destination Image">
             <h2>Petronas Twin Towers</h2> <br>
             <h5 style="padding-bottom: 5px;">About</h5>
-            <p>No trip to KL would be complete without a visit to the world's tallest twin towers. The skyscrapers are utterly stunning, particularly when illuminated at night. The Twin Towers Visit Operations is open Tuesday through Sunday and tickets are released at 8:30 a.m. on a first-come, first-served basis. To avoid disappointment, you can purchase your ticket in advance via online ticketing or at the Ticketing Counter, Concourse Level.</p>
-            <!-- Add interactive map and YouTube video here -->
+            <p>No trip to KL would be complete without a visit to the world's tallest twin towers. The skyscrapers are utterly stunning, particularly when illuminated at night. The Twin Towers Visit Operations is open Tuesday through Sunday and tickets are released at 8:30 a.m. on a first-come, first-served basis. To avoid disappointment, you can purchase your ticket in advance via online ticketing or at the Ticketing Counter, Concourse Level.</p> <br><br>
+            <p>Need help finding us? Check out our interactive map for directions and to get a better sense of our surroundings.</p>
+            <!-- Add interactive map -->
+            <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=350&amp;height=350&amp;hl=en&amp;q=Petronas Twin towers&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://embed-googlemap.com">embed google map</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:350px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:350px;}.gmap_iframe {height:350px!important;}</style></div>
         </div>
-        <iframe style="margin-top: 30px; margin-bottom: 30px;" width="560" height="315" src="https://www.youtube-nocookie.com/embed/WdP0AsWgTgo?si=-VCHMIEO76BMUM41" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <!-- Add Youtube Video -->
+        <p style="margin-top: 50px;">For an in-depth look at this place, check out the video below!</p>
+        <iframe style="margin-bottom: 30px;" width="560" height="315" src="https://www.youtube-nocookie.com/embed/WdP0AsWgTgo?si=-VCHMIEO76BMUM41" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         
-        <p>Ready to make the most of your Malaysian adventure? Click <span><a style="text-decoration: none;" href="travel-tips1.html">here</a></span> for expert travel tips to ensure an unforgettable trip!</p>
+        <p>Ready to make the most of your Malaysian adventure? <span><a style="text-decoration: none;" href="travel-tips1.html">Click here</a></span> for expert travel tips to ensure an unforgettable trip!</p>
     </div>
     <nav class="navbar fixed-bottom navbar-light" style="padding-top: 20px; padding-bottom: 10px; background-color: rgb(220, 209, 195);"></nav>
 </div>
