--- a/escape-info.html
+++ b/escape-info.html
@@ -28,10 +28,15 @@
             <h2>Escape Penang</h2> <br>
             <h5 style="padding-bottom: 5px;">About</h5>
             <p>ESCAPE is the fun destination with exciting rides and attractions. Hosted with nature in mind. Located in Teluk Bahang, Penang, Malaysia, ESCAPE re-introduces outdoor play in a natural environment so to give the visitor an appreciation of the world around them and shows that there's no age limit to having fun.</p>
-            <!-- Add interactive map and YouTube video here -->
+            <p>Need help finding us? Check out our interactive map for directions and to get a better sense of our surroundings.</p>
+            <!-- Add interactive map -->
+            <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=350&amp;height=350&amp;hl=en&amp;q=Escape Penang&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://embed-googlemap.com">embed google map</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:350px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:350px;}.gmap_iframe {height:350px!important;}</style></div>
         </div>
-        <iframe style="margin-top: 30px; margin-bottom: 30px;" width="560" height="315" src="https://www.youtube-nocookie.com/embed/p9H7fwZmMGE?si=UahIjySP4T3z08vU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <p>Ready to make the most of your Malaysian adventure? Click <span><a style="text-decoration: none;" href="travel-tips2.html">here</a></span> for expert travel tips to ensure an unforgettable trip!</p>
+        <!-- Add Youtube Video -->
+        <p style="margin-top: 50px;">For an in-depth look at this place, check out the video below!</p>
+        <iframe style="margin-bottom: 30px;" width="560" height="315" src="https://www.youtube-nocookie.com/embed/p9H7fwZmMGE?si=UahIjySP4T3z08vU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        
+        <p>Ready to make the most of your Malaysian adventure? <span><a style="text-decoration: none;" href="travel-tips2.html">Click here</a></span> for expert travel tips to ensure an unforgettable trip!</p>
     </div>
     <nav class="navbar fixed-bottom navbar-light" style="padding-top: 20px; padding-bottom: 10px; background-color: rgb(220, 209, 195);"></nav>
 </div>
