--- a/escape-info.html
+++ b/escape-info.html
@@ -27,7 +27,7 @@
             <img src="resources/monkey-business.jpg" class="img-fluid mb-3" alt="Destination Image">
             <h2>Escape Penang</h2> <br>
             <h5 style="padding-bottom: 5px;">About</h5>
-            <p>ESCAPE is the fun destination with exciting rides and attractions. Hosted with nature in mind. Located in Teluk Bahang, Penang, Malaysia, ESCAPE re-introduces outdoor play in a natural environment so to give the visitor an appreciation of the world around them and shows that there's no age limit to having fun.</p>
+            <p>ESCAPE is the fun destination with exciting rides and attractions. Hosted with nature in mind. Located in Teluk Bahang, Penang, Malaysia, ESCAPE re-introduces outdoor play in a natural environment so to give the visitor an appreciation of the world around them and shows that there's no age limit to having fun.</p> <br><br>
             <p>Need help finding us? Check out our interactive map for directions and to get a better sense of our surroundings.</p>
             <!-- Add interactive map -->
             <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=350&amp;height=350&amp;hl=en&amp;q=Escape Penang&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://embed-googlemap.com">embed google map</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:350px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:350px;}.gmap_iframe {height:350px!important;}</style></div>
