--- a/travel-tips2.html
+++ b/travel-tips2.html
@@ -47,6 +47,46 @@
             <li>Use reliable transportation</li>
         </ul>
         </div>
+
+        <!-- Updated Currency Exchange Rates Table with Colored Headers -->
+        <h4 class="mt-4 text-center">Currency Exchange Rates</h4>
+        <div class="table-responsive">
+            <table class="table table-hover table-bordered">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col" class="bg-primary text-white">Currency</th>
+                        <th scope="col" class="bg-success text-white">Exchange Rate (MYR)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>USD</td>
+                        <td>4.77</td>
+                    </tr>
+                    <tr>
+                        <td>EUR</td>
+                        <td>4.88</td>
+                    </tr>
+                    <tr>
+                        <td>JPY</td>
+                        <td>0.038</td>
+                    </tr>
+                    <tr>
+                        <td>IDR</td>
+                        <td>0.00029</td>
+                    </tr>
+                    <tr>
+                        <td>SGD</td>
+                        <td>3.10</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+</div>
+
+        
+
         <hr>
         
         <!-- Feedback Form -->
