"Add currency exchange tips and update currency exchange rates table in travel-tips files"

--- a/travel-tips1.html
+++ b/travel-tips1.html
@@ -46,9 +46,18 @@
             <li>Keep your belongings secure</li>
             <li>Use reliable transportation</li>
         </ul>
+
+        <h4 class="mt-4">Currency Exchange Tips</h4>
+        <ul>
+            <li>Compare exchange rates from different providers</li>
+            <li>Avoid exchanging money at airports for better rates</li>
+            <li>Be cautious of hidden fees or commissions</li>
+            <li>Consider using a credit card with no foreign transaction fees</li>
+            <li>Exchange a small amount initially to test the service and rates</li>
+        </ul>
         </div>
 
-        <!-- Updated Currency Exchange Rates Table with Colored Headers -->
+        <!-- Currency Exchange Rates Table -->
         <h4 class="mt-4 text-center">Currency Exchange Rates</h4>
         <div class="table-responsive">
             <table class="table table-hover table-bordered">
