"Added separate divs for each gallery section"
The code diff shows the addition of separate div elements for each gallery section (Petronas Twin Towers and Escape Penang). This allows for better organization and formatting of the

--- a/gallery.html
+++ b/gallery.html
@@ -57,7 +57,9 @@
             <img src="resources/ptt4.jpg" alt="Petronas Twin Tower 4">
         </div>
         <br>
+    </div>
 
+    <div class="gallery">
         <h4>Escape Penang</h4>
         <div class="image">
           <img src="resources/ep1.jpg" alt="Escape Penang 1">
@@ -71,7 +73,7 @@
         <div class="image">
           <img src="resources/ep4.jpg" alt="Escape Penang 4">
         </div>
-      </div>
+    </div>
   </div>
 </body>
 </html>
