Update gallery.css for better styling and responsiveness; adjust gallery.html navigation bar and image hover effect
The changes include:
1. Add a gradient background with texture and opacity adjustments in gallery.css
2. Modify

--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/gallery.css">
 </head>
 
-<body style="background-color: antiquewhite;">
+<body class="gradient">
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -42,8 +42,8 @@
     <div class="containera">
       <h1>Gallery</h1> <br>
 
-      <h4>Petronas Twin Towers</h4>
       <div class="gallery">
+        <h4>Petronas Twin Towers</h4>
           <div class="image">
               <img src="resources/ptt1.jpg" alt="Petronas Twin Tower 1">
           </div>
