Update HTML files: add custom CSS for destination listings page, modify image and title styles in destination info pages
This commit updates the following HTML files:

- destination\_list.html:
  - Add custom CSS for the title

--- a/escape-info.html
+++ b/escape-info.html
@@ -37,11 +37,11 @@
         </div>
     </nav>
 
-    <div class="container py-5" style="margin-bottom: 100px;">
+    <div class="container py-4" style="margin-bottom: 100px;">
         <div class="row">
             <div class="col-md-6">
-                <img src="resources/monkey-business.jpg" class="img-fluid mb-3" alt="Destination Image">
-                <h2>Escape Penang</h2> <br>
+                <img src="resources/monkey-business.jpg" class="img-fluid mb-3" style="border-radius: 10px;" alt="Destination Image">
+                <h1 style="text-shadow: 1px 1px 2px rgba(0,0,0,0.5);">Escape Penang</h1> <br>
                 <h5 style="padding-bottom: 5px;">About</h5>
                 <p>ESCAPE is the fun destination with exciting rides and attractions. Hosted with nature in mind. Located in Teluk Bahang, Penang, Malaysia, ESCAPE re-introduces outdoor play in a natural environment so to give the visitor an appreciation of the world around them and shows that there's no age limit to having fun.</p> <br><br>
                 <p>Need help finding us? Check out our interactive map for directions and to get a better sense of our surroundings.</p>
