--- a/gallery.html
+++ b/gallery.html
@@ -39,9 +39,10 @@
         </div>
     </nav>
 
+    <div class="title-container">
+        <h1 class="page-title">Gallery</h1>
+    </div>
     <div class="containera">
-      <h1>Gallery</h1> <br>
-
       <div class="gallery">
         <h4>Petronas Twin Towers</h4>
           <div class="image">
