--- a/klcc-info.html
+++ b/klcc-info.html
@@ -37,11 +37,11 @@
         </div>
     </nav>
 
-    <div class="container py-5" style="margin-bottom: 100px;">
+    <div class="container py-4" style="margin-bottom: 100px;">
         <div class="row">
             <div class="col-md-6">
-                <img src="resources/klcc.jpg" class="img-fluid mb-3" alt="Destination Image">
-                <h2>Petronas Twin Towers</h2> <br>
+                <img src="resources/klcc.jpg" class="img-fluid mb-3" style="border-radius: 10px;" alt="Destination Image">
+                <h1 style="text-shadow: 1px 1px 2px rgba(0,0,0,0.5);">Petronas Twin Towers</h1> <br>
                 <h5 style="padding-bottom: 5px;">About</h5>
                 <p>No trip to KL would be complete without a visit to the world's tallest twin towers. The skyscrapers are utterly stunning, particularly when illuminated at night. The Twin Towers Visit Operations is open Tuesday through Sunday and tickets are released at 8:30 a.m. on a first-come, first-served basis. To avoid disappointment, you can purchase your ticket in advance via online ticketing or at the Ticketing Counter, Concourse Level.</p> <br><br>
                 <p>Need help finding us? Check out our interactive map for directions and to get a better sense of our surroundings.</p>
