--- a/destination_list.html
+++ b/destination_list.html
@@ -7,6 +7,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/navigation-bar.css">
+    <link rel="stylesheet" href="css/page2.css">
+
+    <style>
+        .title-container {
+            background-color: #e9f0f5; /* Soft blue color */
+            padding: 20px;
+            border-radius: 10px;
+            margin-bottom: 30px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Adjusted shadow */
+        }
+    </style>
 </head>
 
 <body style="background-color: antiquewhite;">
@@ -39,15 +50,16 @@
     </nav>
 
     <div class="container py-3" style="margin-bottom: 60px;">
-        <br>
-        <h1 style="font-size: 2.5rem; font-weight: bold; text-shadow: 1px 1px 2px gray;">Explore Our Top Destination Listings</h1> <br>
+        <div class="title-container">
+            <h1 style="font-size: 2.5rem; font-weight: bold; text-shadow: 1px 1px 2px gray;">Explore Our Top Destination Listings</h1>
+        </div>
         
         <div class="row mt-3">
             <div class="col-md-6">
                 <div class="card mb-3">
                     <img src="resources/petronas-towers.jpg" class="card-img-top" alt="Destination 1">
                     <div class="card-body">
-                        <h5 class="card-title">1. Petronas Twin Towers</h5> <br>
+                        <h5 class="card-title">1. Petronas Twin Towers</h5>
                         <a href="klcc-info.html" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
@@ -57,7 +69,7 @@
                 <div class="card mb-3">
                     <img src="resources/escape penang.jpg" class="card-img-top" alt="Destination 1">
                     <div class="card-body">
-                        <h5 class="card-title">2. Escape Penang</h5> <br>
+                        <h5 class="card-title">2. Escape Penang</h5>
                         <a href="escape-info.html" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
@@ -66,7 +78,7 @@
             <div class="col-md-6">
                 <div class="card mb-3">
                     <div class="card-body">
-                        <h5 class="card-title">Will add more soon...</h5> <br>
+                        <h5 class="card-title">Will add more soon...</h5>
                     </div>
                 </div>
             </div>
