"Changed header levels in gallery.html from <h4> to <h1> for place names"

--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
     </div>
     <div class="containera">
       <div class="gallery">
-        <h4>Petronas Twin Towers</h4>
+        <h1 class="placeName">Petronas Twin Towers</h1>
           <div class="image">
               <img src="resources/ptt1.jpg" alt="Petronas Twin Tower 1">
           </div>
@@ -61,7 +61,7 @@
     </div>
 
     <div class="gallery">
-        <h4>Escape Penang</h4>
+        <h1 class="placeName">Escape Penang</h1>
         <div class="image">
           <img src="resources/ep1.jpg" alt="Escape Penang 1">
         </div>
