--- a/destination_list.html
+++ b/destination_list.html
@@ -17,6 +17,9 @@
             margin-bottom: 30px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Adjusted shadow */
         }
+        img:active {
+            opacity: 0.9;
+        }
     </style>
 </head>
 
